tests/integration/snapshots/retrace/test_retrace_contract_compile_error_is_reported_before_logs_are_created.stderr.txt
Error: Failed to compile contract broken for source-level retrace: [ROOT]/contracts/broken[LINE]: error: expected <expression>, got `;`
   3 |     val broken = ;
     |                  ^
